<resources>
    <string name="app_name">Quabynah Codelabs LLC</string>
    <string name="app_desc">is focused on designing and creating world-class applications for the business environment. We specialize in developing professional applications for Android, iOS &amp; the Web.</string>
    <string name="search_hint">Search Anything…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About Us</string>
    <string name="menu_services">Services</string>
    <string name="menu_apps">Apps</string>
    <string name="menu_app_details">App Details</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_blog_details">Blog Details</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_map">Map</string>

    <string name="get_started">Get Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
