<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@id/nav_home"
        android:name="dev.quabynahcodelabsllc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@id/nav_about"
        android:name="dev.quabynahcodelabsllc.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
    <fragment
        android:id="@id/nav_contact"
        android:name="dev.quabynahcodelabsllc.ui.contact.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_fragment" />
    <fragment
        android:id="@id/nav_map"
        android:name="dev.quabynahcodelabsllc.ui.map.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" />
    <fragment
        android:id="@id/nav_services"
        android:name="dev.quabynahcodelabsllc.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/services_fragment" />
    <fragment
        android:id="@id/nav_blog"
        android:name="dev.quabynahcodelabsllc.ui.blog.BlogFragment"
        android:label="@string/menu_blog"
        tools:layout="@layout/blog_fragment" />
    <dialog
        android:id="@+id/nav_apps"
        android:name="dev.quabynahcodelabsllc.ui.apps.AppListDialogFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_app_list_dialog" />
</navigation>